[tool.poetry]
name = "langbench"
version = "0.0.0"
description = ""
authors = ["ameen-91 <mohammedameen9011@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.15.1"
numpy = "^2.2.3"
pyyaml = "^6.0.2"
langchain = "^0.3.18"
transformers = "^4.48.3"
plotly = "^6.0.0"
pandas = "^2.2.3"
torch = "^2.6.0"
tqdm = "^4.67.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
langchain-openai = "^0.3.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.scripts]
langbench = "langbench.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
